--- a/bbl/i18n/BambuStudio.pot
+++ b/bbl/i18n/BambuStudio.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-02 17:33+0800\n"
+"POT-Creation-Date: 2022-12-05 19:38+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -850,7 +850,7 @@ msgstr ""
 msgid "Center"
 msgstr ""
 
-msgid "Edit Object Process"
+msgid "Edit Process Settings"
 msgstr ""
 
 msgid "Edit in Parameter Table"
@@ -943,7 +943,9 @@ msgstr ""
 msgid "Switch to per-object setting mode to edit modifier settings."
 msgstr ""
 
-msgid "Switch to per-object setting mode to edit object process."
+msgid ""
+"Switch to per-object setting mode to edit process settings of selected "
+"objects."
 msgstr ""
 
 msgid "Deleting the last solid part is not allowed."
@@ -2433,11 +2435,11 @@ msgstr ""
 msgid "Check for Update"
 msgstr ""
 
-#, possible-c-format, possible-boost-format
-msgid "&About %s"
+msgid "Open Network Test"
 msgstr ""
 
-msgid "Open Network Test"
+#, possible-c-format, possible-boost-format
+msgid "&About %s"
 msgstr ""
 
 msgid "Upload Models"
@@ -3509,9 +3511,8 @@ msgid "Load project"
 msgstr ""
 
 msgid ""
-"Failed to save project!\n"
-"Please make sure the project file has not been opened by other program and "
-"try again."
+"Failed to save the project.\n"
+"Please check whether the project file is opened by other programs."
 msgstr ""
 
 msgid "Save project"
@@ -4044,7 +4045,7 @@ msgstr ""
 msgid "Synchronizing device information time out"
 msgstr ""
 
-msgid "Cannot send the print task when the upgrade is in progress"
+msgid "Cannot send the print job when the printer is updating firmware"
 msgstr ""
 
 msgid ""
@@ -4097,7 +4098,9 @@ msgstr ""
 msgid "An SD card needs to be inserted to record timelapse."
 msgstr ""
 
-msgid "Cannot send the print task when the printer need force upgrading."
+msgid ""
+"Cannot send the print job to a printer whose firmware is required to get "
+"updated."
 msgstr ""
 
 msgid "Errors"
@@ -4131,6 +4134,9 @@ msgid "Modifying the device name"
 msgstr ""
 
 msgid "Send to Printer SD card"
+msgstr ""
+
+msgid "Cannot send the print task when the upgrade is in progress"
 msgstr ""
 
 msgid "The printer is required to be in the same LAN as Bambu Studio."
@@ -4523,6 +4529,13 @@ msgid ""
 "contains the following unsaved changes:"
 msgstr ""
 
+#, possible-boost-format
+msgid ""
+"You have changed some settings of preset \"%1%\". \n"
+"Would you like to keep these changed settings (new value) after switching "
+"preset?"
+msgstr ""
+
 msgid ""
 "You have changed some preset settings. \n"
 "Would you like to keep these changed settings (new value) after switching "
@@ -4630,15 +4643,21 @@ msgstr ""
 msgid "Flushing volumes for filament change"
 msgstr ""
 
-msgid ""
-"The flush volume is less than the minimum value and will be automatically "
-"set to the minimum value."
-msgstr ""
-
 msgid "Flushing volume (mm³) for each filament pair."
 msgstr ""
 
-msgid "Flush multiplier"
+msgid "Multiplier"
+msgstr ""
+
+msgid "Actual Volume = Flushing Volume * Multiplier"
+msgstr ""
+
+#, possible-c-format, possible-boost-format
+msgid "Suggestion: Actual Volume in range [%d, %d]"
+msgstr ""
+
+#, possible-c-format, possible-boost-format
+msgid "The multiplier should be in range [%.2f, %.2f]."
 msgstr ""
 
 msgid "unloaded"
@@ -6899,6 +6918,9 @@ msgid ""
 msgstr ""
 
 msgid "Purging volumes"
+msgstr ""
+
+msgid "Flush multiplier"
 msgstr ""
 
 msgid ""
