--- a/bbl/i18n/en/BambuStudio_en.po
+++ b/bbl/i18n/en/BambuStudio_en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-02 17:33+0800\n"
+"POT-Creation-Date: 2022-12-05 19:38+0800\n"
 "Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -860,7 +860,7 @@ msgstr ""
 msgid "Center"
 msgstr ""
 
-msgid "Edit Object Process"
+msgid "Edit Process Settings"
 msgstr ""
 
 msgid "Edit in Parameter Table"
@@ -953,7 +953,9 @@ msgstr "Add Modifier"
 msgid "Switch to per-object setting mode to edit modifier settings."
 msgstr "Switch to per-object setting mode to edit modifier settings."
 
-msgid "Switch to per-object setting mode to edit object process."
+msgid ""
+"Switch to per-object setting mode to edit process settings of selected "
+"objects."
 msgstr ""
 
 msgid "Deleting the last solid part is not allowed."
@@ -2548,12 +2550,12 @@ msgstr ""
 msgid "Check for Update"
 msgstr "Check for Updates"
 
+msgid "Open Network Test"
+msgstr ""
+
 #, c-format, boost-format
 msgid "&About %s"
 msgstr "&About %s"
-
-msgid "Open Network Test"
-msgstr ""
 
 msgid "Upload Models"
 msgstr ""
@@ -3637,9 +3639,8 @@ msgid "Load project"
 msgstr "Load project"
 
 msgid ""
-"Failed to save project!\n"
-"Please make sure the project file has not been opened by other program and "
-"try again."
+"Failed to save the project.\n"
+"Please check whether the project file is opened by other programs."
 msgstr ""
 
 msgid "Save project"
@@ -4183,8 +4184,8 @@ msgstr "Synchronizing device information"
 msgid "Synchronizing device information time out"
 msgstr "Synchronizing device information time out"
 
-msgid "Cannot send the print task when the upgrade is in progress"
-msgstr "Cannot send the print task when the upgrade is in progress"
+msgid "Cannot send the print job when the printer is updating firmware"
+msgstr ""
 
 msgid ""
 "The printer is executing instructions. Please restart printing after it ends"
@@ -4241,7 +4242,9 @@ msgstr ""
 msgid "An SD card needs to be inserted to record timelapse."
 msgstr ""
 
-msgid "Cannot send the print task when the printer need force upgrading."
+msgid ""
+"Cannot send the print job to a printer whose firmware is required to get "
+"updated."
 msgstr ""
 
 msgid "Errors"
@@ -4276,6 +4279,9 @@ msgstr "Modifying the device name"
 
 msgid "Send to Printer SD card"
 msgstr ""
+
+msgid "Cannot send the print task when the upgrade is in progress"
+msgstr "Cannot send the print task when the upgrade is in progress"
 
 msgid "The printer is required to be in the same LAN as Bambu Studio."
 msgstr ""
@@ -4697,6 +4703,13 @@ msgstr ""
 "Preset \"%1%\" is not compatible with the new process profile and it "
 "contains the following unsaved changes:"
 
+#, boost-format
+msgid ""
+"You have changed some settings of preset \"%1%\". \n"
+"Would you like to keep these changed settings (new value) after switching "
+"preset?"
+msgstr ""
+
 msgid ""
 "You have changed some preset settings. \n"
 "Would you like to keep these changed settings (new value) after switching "
@@ -4809,16 +4822,22 @@ msgstr "Auto-Calc"
 msgid "Flushing volumes for filament change"
 msgstr "Flushing volumes for filament change"
 
-msgid ""
-"The flush volume is less than the minimum value and will be automatically "
-"set to the minimum value."
-msgstr ""
-
 msgid "Flushing volume (mm³) for each filament pair."
 msgstr "Flushing volume (mm³) for each filament pair."
 
-msgid "Flush multiplier"
-msgstr "Flush multiplier"
+msgid "Multiplier"
+msgstr ""
+
+msgid "Actual Volume = Flushing Volume * Multiplier"
+msgstr ""
+
+#, c-format, boost-format
+msgid "Suggestion: Actual Volume in range [%d, %d]"
+msgstr ""
+
+#, c-format, boost-format
+msgid "The multiplier should be in range [%.2f, %.2f]."
+msgstr ""
 
 msgid "unloaded"
 msgstr "unloaded"
@@ -7311,6 +7330,9 @@ msgstr ""
 
 msgid "Purging volumes"
 msgstr "Purging volumes"
+
+msgid "Flush multiplier"
+msgstr "Flush multiplier"
 
 msgid ""
 "The actual flushing volumes is equal to the flush multiplier multiplied by "
