--- a/bbl/i18n/fr/BambuStudio_fr.po
+++ b/bbl/i18n/fr/BambuStudio_fr.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-02 17:33+0800\n"
+"POT-Creation-Date: 2022-12-05 19:38+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -873,7 +873,7 @@ msgstr ""
 msgid "Center"
 msgstr ""
 
-msgid "Edit Object Process"
+msgid "Edit Process Settings"
 msgstr ""
 
 msgid "Edit in Parameter Table"
@@ -972,7 +972,9 @@ msgstr ""
 "Basculez vers le mode de réglage par objet pour modifier les paramètres du "
 "modificateur."
 
-msgid "Switch to per-object setting mode to edit object process."
+msgid ""
+"Switch to per-object setting mode to edit process settings of selected "
+"objects."
 msgstr ""
 
 msgid "Deleting the last solid part is not allowed."
@@ -2566,12 +2568,12 @@ msgstr ""
 msgid "Check for Update"
 msgstr "Vérifier la mise à jour"
 
+msgid "Open Network Test"
+msgstr ""
+
 #, c-format, boost-format
 msgid "&About %s"
 msgstr "&À propos de %s"
-
-msgid "Open Network Test"
-msgstr ""
 
 msgid "Upload Models"
 msgstr ""
@@ -3656,9 +3658,8 @@ msgid "Load project"
 msgstr "Charger le projet"
 
 msgid ""
-"Failed to save project!\n"
-"Please make sure the project file has not been opened by other program and "
-"try again."
+"Failed to save the project.\n"
+"Please check whether the project file is opened by other programs."
 msgstr ""
 
 msgid "Save project"
@@ -4216,10 +4217,8 @@ msgstr "Synchronisation des informations sur l'appareil"
 msgid "Synchronizing device information time out"
 msgstr "Expiration du délai de synchronisation des informations sur l'appareil"
 
-msgid "Cannot send the print task when the upgrade is in progress"
+msgid "Cannot send the print job when the printer is updating firmware"
 msgstr ""
-"Impossible d'envoyer la tâche d'impression lorsque la mise à niveau est en "
-"cours."
 
 msgid ""
 "The printer is executing instructions. Please restart printing after it ends"
@@ -4278,7 +4277,9 @@ msgstr ""
 msgid "An SD card needs to be inserted to record timelapse."
 msgstr ""
 
-msgid "Cannot send the print task when the printer need force upgrading."
+msgid ""
+"Cannot send the print job to a printer whose firmware is required to get "
+"updated."
 msgstr ""
 
 msgid "Errors"
@@ -4315,6 +4316,11 @@ msgstr "Modification du nom de l'appareil"
 
 msgid "Send to Printer SD card"
 msgstr ""
+
+msgid "Cannot send the print task when the upgrade is in progress"
+msgstr ""
+"Impossible d'envoyer la tâche d'impression lorsque la mise à niveau est en "
+"cours."
 
 msgid "The printer is required to be in the same LAN as Bambu Studio."
 msgstr ""
@@ -4752,6 +4758,13 @@ msgstr ""
 "Le préréglage \"%1%\" n'est pas compatible avec le nouveau profil de "
 "processus et contient les modifications non enregistrées suivantes :"
 
+#, boost-format
+msgid ""
+"You have changed some settings of preset \"%1%\". \n"
+"Would you like to keep these changed settings (new value) after switching "
+"preset?"
+msgstr ""
+
 msgid ""
 "You have changed some preset settings. \n"
 "Would you like to keep these changed settings (new value) after switching "
@@ -4864,16 +4877,22 @@ msgstr "Auto-Calc"
 msgid "Flushing volumes for filament change"
 msgstr "Volumes de rinçage pour le changement de filament"
 
-msgid ""
-"The flush volume is less than the minimum value and will be automatically "
-"set to the minimum value."
-msgstr ""
-
 msgid "Flushing volume (mm³) for each filament pair."
 msgstr "Volume de rinçage (mm³) pour chaque paire de filaments."
 
-msgid "Flush multiplier"
-msgstr "Multiplicateur de purge"
+msgid "Multiplier"
+msgstr ""
+
+msgid "Actual Volume = Flushing Volume * Multiplier"
+msgstr ""
+
+#, c-format, boost-format
+msgid "Suggestion: Actual Volume in range [%d, %d]"
+msgstr ""
+
+#, c-format, boost-format
+msgid "The multiplier should be in range [%.2f, %.2f]."
+msgstr ""
 
 msgid "unloaded"
 msgstr "déchargé"
@@ -7432,6 +7451,9 @@ msgstr ""
 
 msgid "Purging volumes"
 msgstr "Volumes de purge"
+
+msgid "Flush multiplier"
+msgstr "Multiplicateur de purge"
 
 msgid ""
 "The actual flushing volumes is equal to the flush multiplier multiplied by "
