--- a/bbl/i18n/hu/BambuStudio_hu.po
+++ b/bbl/i18n/hu/BambuStudio_hu.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-02 17:33+0800\n"
+"POT-Creation-Date: 2022-12-05 19:38+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -872,7 +872,7 @@ msgstr ""
 msgid "Center"
 msgstr ""
 
-msgid "Edit Object Process"
+msgid "Edit Process Settings"
 msgstr ""
 
 msgid "Edit in Parameter Table"
@@ -970,7 +970,9 @@ msgstr ""
 "Válts át objektumonkénti beállítási módba a módosító beállításainak "
 "szerkesztéséhez."
 
-msgid "Switch to per-object setting mode to edit object process."
+msgid ""
+"Switch to per-object setting mode to edit process settings of selected "
+"objects."
 msgstr ""
 
 msgid "Deleting the last solid part is not allowed."
@@ -2592,12 +2594,12 @@ msgstr ""
 msgid "Check for Update"
 msgstr "Frissítés keresése"
 
+msgid "Open Network Test"
+msgstr ""
+
 #, c-format, boost-format
 msgid "&About %s"
 msgstr "&%s névjegye"
-
-msgid "Open Network Test"
-msgstr ""
 
 msgid "Upload Models"
 msgstr ""
@@ -3687,9 +3689,8 @@ msgid "Load project"
 msgstr "Projekt betöltése"
 
 msgid ""
-"Failed to save project!\n"
-"Please make sure the project file has not been opened by other program and "
-"try again."
+"Failed to save the project.\n"
+"Please check whether the project file is opened by other programs."
 msgstr ""
 
 msgid "Save project"
@@ -4237,10 +4238,8 @@ msgstr "Eszközinformációk szinkronizálása"
 msgid "Synchronizing device information time out"
 msgstr "Eszközinformációk szinkronizálása túllépte az időkorlátot"
 
-msgid "Cannot send the print task when the upgrade is in progress"
+msgid "Cannot send the print job when the printer is updating firmware"
 msgstr ""
-"Nem küldhetsz nyomtatási feladatot a nyomtatóra, amikor frissítés van "
-"folyamatban"
 
 msgid ""
 "The printer is executing instructions. Please restart printing after it ends"
@@ -4298,7 +4297,9 @@ msgstr ""
 msgid "An SD card needs to be inserted to record timelapse."
 msgstr ""
 
-msgid "Cannot send the print task when the printer need force upgrading."
+msgid ""
+"Cannot send the print job to a printer whose firmware is required to get "
+"updated."
 msgstr ""
 
 msgid "Errors"
@@ -4337,6 +4338,11 @@ msgstr "Eszköz nevének módosítása"
 
 msgid "Send to Printer SD card"
 msgstr ""
+
+msgid "Cannot send the print task when the upgrade is in progress"
+msgstr ""
+"Nem küldhetsz nyomtatási feladatot a nyomtatóra, amikor frissítés van "
+"folyamatban"
 
 msgid "The printer is required to be in the same LAN as Bambu Studio."
 msgstr ""
@@ -4765,6 +4771,13 @@ msgstr ""
 "A(z) \"%1%\" beállítás nem kompatibilis az új folyamat profillal és a "
 "következő elmentetlen változásokat tartalmazza:"
 
+#, boost-format
+msgid ""
+"You have changed some settings of preset \"%1%\". \n"
+"Would you like to keep these changed settings (new value) after switching "
+"preset?"
+msgstr ""
+
 msgid ""
 "You have changed some preset settings. \n"
 "Would you like to keep these changed settings (new value) after switching "
@@ -4875,16 +4888,22 @@ msgstr "Automatikus számítás"
 msgid "Flushing volumes for filament change"
 msgstr "Filament csere tiszítási mennyisége"
 
-msgid ""
-"The flush volume is less than the minimum value and will be automatically "
-"set to the minimum value."
-msgstr ""
-
 msgid "Flushing volume (mm³) for each filament pair."
 msgstr "Egyes filamentpárok tiszítási mennyisége (mm³)."
 
-msgid "Flush multiplier"
-msgstr "Öblítési szorzó"
+msgid "Multiplier"
+msgstr ""
+
+msgid "Actual Volume = Flushing Volume * Multiplier"
+msgstr ""
+
+#, c-format, boost-format
+msgid "Suggestion: Actual Volume in range [%d, %d]"
+msgstr ""
+
+#, c-format, boost-format
+msgid "The multiplier should be in range [%.2f, %.2f]."
+msgstr ""
 
 msgid "unloaded"
 msgstr "unloaded"
@@ -7422,6 +7441,9 @@ msgstr ""
 
 msgid "Purging volumes"
 msgstr "Tisztítási mennyiségek"
+
+msgid "Flush multiplier"
+msgstr "Öblítési szorzó"
 
 msgid ""
 "The actual flushing volumes is equal to the flush multiplier multiplied by "
