--- a/bbl/i18n/nl/BambuStudio_nl.po
+++ b/bbl/i18n/nl/BambuStudio_nl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-02 17:33+0800\n"
+"POT-Creation-Date: 2022-12-05 19:38+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -871,7 +871,7 @@ msgstr ""
 msgid "Center"
 msgstr ""
 
-msgid "Edit Object Process"
+msgid "Edit Process Settings"
 msgstr ""
 
 msgid "Edit in Parameter Table"
@@ -972,7 +972,9 @@ msgstr ""
 "Schakel over naar instellingsmodus per object om instellingen van de "
 "aanpassing te bewerken."
 
-msgid "Switch to per-object setting mode to edit object process."
+msgid ""
+"Switch to per-object setting mode to edit process settings of selected "
+"objects."
 msgstr ""
 
 msgid "Deleting the last solid part is not allowed."
@@ -2589,12 +2591,12 @@ msgstr ""
 msgid "Check for Update"
 msgstr "Zoeken naar updates"
 
+msgid "Open Network Test"
+msgstr ""
+
 #, c-format, boost-format
 msgid "&About %s"
 msgstr "&Over %s"
-
-msgid "Open Network Test"
-msgstr ""
 
 msgid "Upload Models"
 msgstr ""
@@ -3694,9 +3696,8 @@ msgid "Load project"
 msgstr "Project laden"
 
 msgid ""
-"Failed to save project!\n"
-"Please make sure the project file has not been opened by other program and "
-"try again."
+"Failed to save the project.\n"
+"Please check whether the project file is opened by other programs."
 msgstr ""
 
 msgid "Save project"
@@ -4254,8 +4255,8 @@ msgstr "Informatie over het apparaat synchroniseren"
 msgid "Synchronizing device information time out"
 msgstr "Time-out tijdens synchronisatie van apparaatinformatie"
 
-msgid "Cannot send the print task when the upgrade is in progress"
-msgstr "Kan de printtaak niet verzenden wanneer de upgrade wordt uitgevoerd"
+msgid "Cannot send the print job when the printer is updating firmware"
+msgstr ""
 
 msgid ""
 "The printer is executing instructions. Please restart printing after it ends"
@@ -4313,7 +4314,9 @@ msgstr ""
 msgid "An SD card needs to be inserted to record timelapse."
 msgstr ""
 
-msgid "Cannot send the print task when the printer need force upgrading."
+msgid ""
+"Cannot send the print job to a printer whose firmware is required to get "
+"updated."
 msgstr ""
 
 msgid "Errors"
@@ -4348,6 +4351,9 @@ msgstr "De naam van het apparaat wijzigen"
 
 msgid "Send to Printer SD card"
 msgstr ""
+
+msgid "Cannot send the print task when the upgrade is in progress"
+msgstr "Kan de printtaak niet verzenden wanneer de upgrade wordt uitgevoerd"
 
 msgid "The printer is required to be in the same LAN as Bambu Studio."
 msgstr ""
@@ -4783,6 +4789,13 @@ msgstr ""
 "Voorinstelling \"%1%\" is niet compatibel met het niet proces profiel en "
 "bevat de navolgende nog niet opgeslagen aanpassingen:"
 
+#, boost-format
+msgid ""
+"You have changed some settings of preset \"%1%\". \n"
+"Would you like to keep these changed settings (new value) after switching "
+"preset?"
+msgstr ""
+
 msgid ""
 "You have changed some preset settings. \n"
 "Would you like to keep these changed settings (new value) after switching "
@@ -4896,16 +4909,22 @@ msgstr "Automatisch berekenen"
 msgid "Flushing volumes for filament change"
 msgstr "Volumes reinigen voor filament wijziging"
 
-msgid ""
-"The flush volume is less than the minimum value and will be automatically "
-"set to the minimum value."
-msgstr ""
-
 msgid "Flushing volume (mm³) for each filament pair."
 msgstr "Spoelvolume (mm³) voor elk filamentpaar."
 
-msgid "Flush multiplier"
-msgstr "Flush-vermenigvuldiger"
+msgid "Multiplier"
+msgstr ""
+
+msgid "Actual Volume = Flushing Volume * Multiplier"
+msgstr ""
+
+#, c-format, boost-format
+msgid "Suggestion: Actual Volume in range [%d, %d]"
+msgstr ""
+
+#, c-format, boost-format
+msgid "The multiplier should be in range [%.2f, %.2f]."
+msgstr ""
 
 msgid "unloaded"
 msgstr "uitgeladen"
@@ -7455,6 +7474,9 @@ msgstr ""
 
 msgid "Purging volumes"
 msgstr "Volumes opschonen"
+
+msgid "Flush multiplier"
+msgstr "Flush-vermenigvuldiger"
 
 msgid ""
 "The actual flushing volumes is equal to the flush multiplier multiplied by "
