--- a/bbl/i18n/sv/BambuStudio_sv.po
+++ b/bbl/i18n/sv/BambuStudio_sv.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-02 17:33+0800\n"
+"POT-Creation-Date: 2022-12-05 19:38+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -864,7 +864,7 @@ msgstr ""
 msgid "Center"
 msgstr ""
 
-msgid "Edit Object Process"
+msgid "Edit Process Settings"
 msgstr ""
 
 msgid "Edit in Parameter Table"
@@ -957,7 +957,9 @@ msgstr "Lägg till Modifierare"
 msgid "Switch to per-object setting mode to edit modifier settings."
 msgstr "Ändra till per objekt inställningsläge till redigerings inställningar."
 
-msgid "Switch to per-object setting mode to edit object process."
+msgid ""
+"Switch to per-object setting mode to edit process settings of selected "
+"objects."
 msgstr ""
 
 msgid "Deleting the last solid part is not allowed."
@@ -2560,12 +2562,12 @@ msgstr ""
 msgid "Check for Update"
 msgstr "Sök efter Uppdatering"
 
+msgid "Open Network Test"
+msgstr ""
+
 #, c-format, boost-format
 msgid "&About %s"
 msgstr "&Om %s"
-
-msgid "Open Network Test"
-msgstr ""
 
 msgid "Upload Models"
 msgstr ""
@@ -3645,9 +3647,8 @@ msgid "Load project"
 msgstr "Ladda projekt"
 
 msgid ""
-"Failed to save project!\n"
-"Please make sure the project file has not been opened by other program and "
-"try again."
+"Failed to save the project.\n"
+"Please check whether the project file is opened by other programs."
 msgstr ""
 
 msgid "Save project"
@@ -4187,8 +4188,8 @@ msgstr "Synkroniserar enhetsinformation"
 msgid "Synchronizing device information time out"
 msgstr "Time-out för synkronisering av enhetsinformation"
 
-msgid "Cannot send the print task when the upgrade is in progress"
-msgstr "Det går inte att skicka utskriftsuppgiften när uppgraderingen pågår"
+msgid "Cannot send the print job when the printer is updating firmware"
+msgstr ""
 
 msgid ""
 "The printer is executing instructions. Please restart printing after it ends"
@@ -4246,7 +4247,9 @@ msgstr ""
 msgid "An SD card needs to be inserted to record timelapse."
 msgstr ""
 
-msgid "Cannot send the print task when the printer need force upgrading."
+msgid ""
+"Cannot send the print job to a printer whose firmware is required to get "
+"updated."
 msgstr ""
 
 msgid "Errors"
@@ -4281,6 +4284,9 @@ msgstr "Ändra enhetens namn"
 
 msgid "Send to Printer SD card"
 msgstr ""
+
+msgid "Cannot send the print task when the upgrade is in progress"
+msgstr "Det går inte att skicka utskriftsuppgiften när uppgraderingen pågår"
 
 msgid "The printer is required to be in the same LAN as Bambu Studio."
 msgstr ""
@@ -4710,6 +4716,13 @@ msgstr ""
 "Förinställningen \"%1%\" är inte kompatibel med den nya process profilen och "
 "innehåller följande osparade ändringar:"
 
+#, boost-format
+msgid ""
+"You have changed some settings of preset \"%1%\". \n"
+"Would you like to keep these changed settings (new value) after switching "
+"preset?"
+msgstr ""
+
 msgid ""
 "You have changed some preset settings. \n"
 "Would you like to keep these changed settings (new value) after switching "
@@ -4821,16 +4834,22 @@ msgstr "Autoberäkna"
 msgid "Flushing volumes for filament change"
 msgstr "Rensnings volym för filament byte"
 
-msgid ""
-"The flush volume is less than the minimum value and will be automatically "
-"set to the minimum value."
-msgstr ""
-
 msgid "Flushing volume (mm³) for each filament pair."
 msgstr "Rensnings volym (mm³) för varje filament."
 
-msgid "Flush multiplier"
-msgstr "Rensnings multiplikator"
+msgid "Multiplier"
+msgstr ""
+
+msgid "Actual Volume = Flushing Volume * Multiplier"
+msgstr ""
+
+#, c-format, boost-format
+msgid "Suggestion: Actual Volume in range [%d, %d]"
+msgstr ""
+
+#, c-format, boost-format
+msgid "The multiplier should be in range [%.2f, %.2f]."
+msgstr ""
 
 msgid "unloaded"
 msgstr "utmatad"
@@ -7314,6 +7333,9 @@ msgstr ""
 
 msgid "Purging volumes"
 msgstr "Rensnings volym"
+
+msgid "Flush multiplier"
+msgstr "Rensnings multiplikator"
 
 msgid ""
 "The actual flushing volumes is equal to the flush multiplier multiplied by "
