--- a/bbl/i18n/BambuStudio.pot
+++ b/bbl/i18n/BambuStudio.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-05 19:38+0800\n"
+"POT-Creation-Date: 2022-12-06 14:23+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -25,6 +25,9 @@ msgid "Alt + Mouse wheel"
 msgstr ""
 
 msgid "Section view"
+msgstr ""
+
+msgid "Reset direction"
 msgstr ""
 
 msgid "Ctrl + Mouse wheel"
@@ -344,9 +347,6 @@ msgid "Face recognition"
 msgstr ""
 
 msgid "Perform Recognition"
-msgstr ""
-
-msgid "Reset direction"
 msgstr ""
 
 msgid "Brush size"
@@ -1102,10 +1102,10 @@ msgstr ""
 msgid "OK"
 msgstr ""
 
-msgid "Go to layer"
+msgid "Jump to layer"
 msgstr ""
 
-msgid "Layer number"
+msgid "Please enter the layer number"
 msgstr ""
 
 msgid "Jump to Layer"
@@ -4140,6 +4140,9 @@ msgid "Cannot send the print task when the upgrade is in progress"
 msgstr ""
 
 msgid "The printer is required to be in the same LAN as Bambu Studio."
+msgstr ""
+
+msgid "The printer does not support sending to printer SD card."
 msgstr ""
 
 msgid "Cool Plate"
