--- a/bbl/i18n/en/BambuStudio_en.po
+++ b/bbl/i18n/en/BambuStudio_en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-05 19:38+0800\n"
+"POT-Creation-Date: 2022-12-06 14:23+0800\n"
 "Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,6 +18,9 @@ msgstr "Alt + Mouse wheel"
 
 msgid "Section view"
 msgstr "Section view"
+
+msgid "Reset direction"
+msgstr ""
 
 msgid "Ctrl + Mouse wheel"
 msgstr "Ctrl + Mouse wheel"
@@ -342,9 +345,6 @@ msgstr "Face recognition"
 
 msgid "Perform Recognition"
 msgstr "Perform Recognition"
-
-msgid "Reset direction"
-msgstr ""
 
 msgid "Brush size"
 msgstr ""
@@ -1117,10 +1117,10 @@ msgstr ""
 msgid "OK"
 msgstr "OK"
 
-msgid "Go to layer"
+msgid "Jump to layer"
 msgstr ""
 
-msgid "Layer number"
+msgid "Please enter the layer number"
 msgstr ""
 
 msgid "Jump to Layer"
@@ -4284,6 +4284,9 @@ msgid "Cannot send the print task when the upgrade is in progress"
 msgstr "Cannot send the print task when the upgrade is in progress"
 
 msgid "The printer is required to be in the same LAN as Bambu Studio."
+msgstr ""
+
+msgid "The printer does not support sending to printer SD card."
 msgstr ""
 
 msgid "Cool Plate"
