--- a/bbl/i18n/es/BambuStudio_es.po
+++ b/bbl/i18n/es/BambuStudio_es.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-05 19:38+0800\n"
+"POT-Creation-Date: 2022-12-06 14:23+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -21,6 +21,9 @@ msgstr "Alt + Rueda del ratón"
 
 msgid "Section view"
 msgstr "Vista de la sección"
+
+msgid "Reset direction"
+msgstr ""
 
 msgid "Ctrl + Mouse wheel"
 msgstr "Ctrl + Rueda del ratón"
@@ -348,9 +351,6 @@ msgstr "Reconocimiento facial"
 
 msgid "Perform Recognition"
 msgstr "Realizar el reconocimiento"
-
-msgid "Reset direction"
-msgstr ""
 
 msgid "Brush size"
 msgstr ""
@@ -1140,10 +1140,10 @@ msgstr ""
 msgid "OK"
 msgstr "OK"
 
-msgid "Go to layer"
+msgid "Jump to layer"
 msgstr ""
 
-msgid "Layer number"
+msgid "Please enter the layer number"
 msgstr ""
 
 msgid "Jump to Layer"
@@ -4348,6 +4348,9 @@ msgstr ""
 "curso"
 
 msgid "The printer is required to be in the same LAN as Bambu Studio."
+msgstr ""
+
+msgid "The printer does not support sending to printer SD card."
 msgstr ""
 
 msgid "Cool Plate"
