--- a/bbl/i18n/nl/BambuStudio_nl.po
+++ b/bbl/i18n/nl/BambuStudio_nl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-05 19:38+0800\n"
+"POT-Creation-Date: 2022-12-06 14:23+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -21,6 +21,9 @@ msgstr "Alt + muiswiel"
 
 msgid "Section view"
 msgstr "Doorsnede"
+
+msgid "Reset direction"
+msgstr ""
 
 msgid "Ctrl + Mouse wheel"
 msgstr "Ctrl + muiswiel"
@@ -347,9 +350,6 @@ msgstr "Gezichtsherkenning"
 
 msgid "Perform Recognition"
 msgstr "Herkenning uitvoeren"
-
-msgid "Reset direction"
-msgstr ""
 
 msgid "Brush size"
 msgstr ""
@@ -1144,10 +1144,10 @@ msgstr ""
 msgid "OK"
 msgstr "Offline"
 
-msgid "Go to layer"
+msgid "Jump to layer"
 msgstr ""
 
-msgid "Layer number"
+msgid "Please enter the layer number"
 msgstr ""
 
 msgid "Jump to Layer"
@@ -4356,6 +4356,9 @@ msgid "Cannot send the print task when the upgrade is in progress"
 msgstr "Kan de printtaak niet verzenden wanneer de upgrade wordt uitgevoerd"
 
 msgid "The printer is required to be in the same LAN as Bambu Studio."
+msgstr ""
+
+msgid "The printer does not support sending to printer SD card."
 msgstr ""
 
 msgid "Cool Plate"
